#Files that are used for wrappers in order to test the code.
#qsub wraps qsub_functions
SUBDIRS = MXML common_cmds pbs_track pbsdsh pbsnodes pbspd pbspoe qalter qchkpt qdel qdisable qenable qgpumode qgpureset qhold qmgr qmove qmsg qorder qrerun qrls qrun qselect qsig qstart qstat qstop qsub_functions qterm
