include $(top_srcdir)/buildutils/config.mk

lib_LTLIBRARIES = libcmds.la

libcmds_la_SOURCES = ck_job_name.c cnt2server.c cvtdate.c get_server.c \
		     locate_job.c parse_at.c parse_depend.c parse_destid.c \
		     parse_equal.c parse_jobid.c parse_stage.c \
		     prepare_path.c prt_job_err.c set_attr.c set_resource.c
